--- a/task34.html
+++ b/task34.html
@@ -11,7 +11,10 @@
     <script>
         function init() {
             let msg= document.querySelector ("#msg");
-            msg.innerHTML = "<b>A</b> <u> test</>";
+            let a = 10;
+            let b = "3";
+            let c = a + b;
+            msg.innerHTML = c;
         }
         window.addEventListener("load", init)
     </script>
