--- a/kalendar.html
+++ b/kalendar.html
@@ -88,7 +88,7 @@
             for (let i=1; i<dUNP; i++) {
                 dani.push("");
                 }
-            for (let dan= 1; dan<brojDana; dan++){
+            for (let dan= 1; dan <brojDana +1; dan++){
                 dani.push(dan);
                 }    
             for (let i=dUNK; i<7; i++){
@@ -116,7 +116,8 @@
             window.addEventListener("load", main);
             function main() {
                 let sada= new Date ();
-                popuniKalendar(2022, 4);
+                popuniKalendar(2022, 7
+                );
             }
         
     </script>
