--- a/json.html
+++ b/json.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pig Game</title>
+    <title>json</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+   <textarea  id="text" cols="40" rows="15"></textarea> 
+   <script src="json.js"></script>
 </body>
 </html>
