--- a/fetch.html
+++ b/fetch.html
@@ -9,8 +9,27 @@
 </head>
 
 <body>
+    <button type="button" onclick="ucitavanjeStatistike();">
+        Ucitaj statistiku
+    </button>
+    <button type="button" onclick="ucitajTop10();">
+        Ucitaj Top 10
+    </button>
+    <button type="button" onclick="evidentirajProdaju();">
+        Dodavanje
+    </button>
     <div id="app">
-
+    </div>
+    <div>
+        Datum prodaje <br>
+        <input type="date" id="datum_prodaje"><br>
+        Ime artikla <br>
+        <input type="text" id="naziv_artikla"><br>
+        Cena artikla <br>
+        <input type="number" id="cena_artikla" min="0.01" step="0.01" value="0.01"><br>
+        Kolicina <br>
+        <input type="number" id="prodata_kolicina" min="0.01" step="0.01" value="0.01"><br>
+        <button type="button" onclick="evidentirajProdaju()">Evidentiraj prodaju</button>
     </div>
     <script src="fetch.js"></script>
 </body>
