--- a/project/index.html
+++ b/project/index.html
@@ -69,10 +69,127 @@
     <div id="main">
         <div class="container">
             <div id="sidebar">
-
+                <div class="title">
+                    Detaljna pretraga
+                </div>
+                <div class="grupe-filtera">
+                    <div class="grupa-filtera">
+                        <div class="subtitle">
+                            Kategorije
+                        </div>
+                        <div class="filteri">
+                            <div class="filter">
+                                <input type="checkbox">Elektronika
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Muska obuca
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Zenska obuca
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Muska odeca
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Zenska odeca
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Akcesoari
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Rucni satovi
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grupa-filtera">
+                        <div class="subtitle">
+                            Stanje
+                        </div>
+                        <div class="filteri">
+                            <div class="filter">
+                                <input type="checkbox">Novo
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Polovno
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Osteceno
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grupa-filtera">
+                        <div class="subtitle">
+                            Mogucnost zamene
+                        </div>
+                        <div class="filteri">
+                            <div class="filter">
+                                <input type="checkbox">Moguca zamena
+                            </div>
+                            <div class="filter">
+                                <input type="checkbox">Bez zamene
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div id="sadrzaj">
-
+                <div class="selektor">
+                    Redosled sortiranja
+                    <select class="obican-selektor">
+                        <option value="">Podrazumevani redosled</option>
+                        <option value="">Po ceni-rastuce</option>
+                        <option value="">Po ceni-opaadajuce</option>
+                        <option value="">Po nazivu-rastuce</option>
+                        <option value="">Po nazivu-opadajuce</option>
+                    </select>
+                </div>
+                <div id="artikli">
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A1">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A2">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A3">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A4">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A5">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A6">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A7">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A8">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                    <a href="#" class="artikal">
+                        <img src="./slike/1.jpg" alt="A9">
+                        <div class="cena">1000 din</div>
+                        <div class="podnaslov">MMR-COV19</div>
+                    </a>
+                </div>
             </div>
         </div>
 
