--- a/project/animacije.html
+++ b/project/animacije.html
@@ -11,6 +11,14 @@
 
 <body>
     <div id="element"></div>
+    <div>
+        Forename
+        <input type="text" class="animirani-input">
+        Surname
+        <input type="text" class="animirani-input">
+        Country
+        <input type="text" class="animirani-input">
+    </div>
 </body>
 
 </html>
