--- a/project/animacije.html
+++ b/project/animacije.html
@@ -19,6 +19,9 @@
         Country
         <input type="text" class="animirani-input">
     </div>
+    <div class="animirani">
+        Lorem ipsum dolor sit amet elit. Ab quia face!
+    </div>
 </body>
 
 </html>
